# SPuManTE

./: README.md
amira/: .gitignore  .ycm_extra_conf.py  Makefile  NOTICE  amira.cpp  amira.h  amira_regex.h  compare_fis.cpp  epsilon.h  grahne  ignore_freq-2.diff  ignore_freq.diff  sample.h  sample.txt  sort_fis.cpp  wheelwright  ycm_extra_conf.py
amira/grahne_git/: .gitignore  LICENSE  README.md
amira/grahne_git/src/: Makefile  algos.h  buffer.cpp  buffer.h  common.h  fp_node.cpp  fp_node.h  fp_tree.cpp  fp_tree.h  fpmax.cpp  fsout.h  glob.cpp  main.h
amira/wheelwright_git/: .gitmodules  CMakeLists.txt  NOTICE  README.md  TODO.md
amira/wheelwright_git/src/: Bounds.h  Bounds_impl.h  Factory.h  Features.h  Projection.h  ProjectionIterator.h  Projection_impl.h  Vector.h  matteoutils
amira/wheelwright_git/src/cmake/Modules/: FindNLopt.cmake
amira/wheelwright_git/src/matteoutils_git/: .gitignore  CMakeLists.txt  NOTICE  README.md  TODO.md
amira/wheelwright_git/src/matteoutils_git/src/: ChaseSeq.h  ChaseSeqIter.h  Iterators.h  KeyValueGetters.h  LogSumFromLogs.h  LogSumLog_impl.h  MissingMath.h  NumericTools.h  PtrEqualTo.h  PtrHash.h  PtrLess.h  RandomAccessIteratorIncludes.h  Sampler.h  VCDim.h
amira/wheelwright_git/src/matteoutils_git/test/: CMakeLists.txt
amira/wheelwright_git/src/matteoutils_git/test/chaseseq/: CMakeLists.txt  chaseseqtests.cpp
amira/wheelwright_git/src/matteoutils_git/test/logsumfromlogs/: CMakeLists.txt  logsumfromlogstests.cpp
amira/wheelwright_git/src/matteoutils_git/test/missingmath/: CMakeLists.txt  missingmathtests.cpp
amira/wheelwright_git/src/matteoutils_git/test/ptr/: CMakeLists.txt  ptrtests.cpp
amira/wheelwright_git/src/matteoutils_git/test/randomaccessiteratorincludes/: CMakeLists.txt  randomaccessiteratorincludestests.cpp
amira/wheelwright_git/src/matteoutils_git/test/vcdim/: CMakeLists.txt  vcdimtests.cpp
amira/wheelwright_git/test/: CMakeLists.txt
amira/wheelwright_git/test/bounds/: CMakeLists.txt  boundstests.cpp
amira/wheelwright_git/test/projection/: CMakeLists.txt  projectiontests.cpp
amira/wheelwright_git/test/vector/: CMakeLists.txt  vectortests.cpp
fisher/correct/: .cproject  fim_closed  lamp.c  makefile  time_keeping.c
fisher/enumerate/: .cproject  enumerate_significant_itemsets.c  lcm.c  process_output.py  time_keeping.c  transaction_keeping.c
scripts/: find_max_pi.py  fisher_simulations.py  plot_results_simulations.py  run_all_datasets.py  run_amira.py  run_fisher.py  run_unconditional.py
unconditional/correct/: fastio.c  lamp.c  lcm.c  lcm_io.c  makefile  makefile (copy)  transaction_keeping.c  unconditional.c
unconditional/enumerate/: .project  enumerate_significant_itemsets.c  fastio.c  fim_closed  incbeta.c  lcm.c  lcm_freq.c  lcm_init.c  lcm_io.c  lcm_var.c  makefile  time_keeping.c  transaction_keeping.c  unconditional.c
